--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -9,7 +9,7 @@
           <th>Price</th>
         </tr>
       </thead>
-      <tbody *ngFor="let product of carts">
+      <tbody *ngFor="let product of cartProducts">
         <tr>
           <td>{{ product.id }}</td>
           <td>{{ product.title }}</td>
@@ -20,10 +20,9 @@
     </table>
   </div>
   <div class="d-flex justify-content-end me-5 px-5 fs-5">
-    <p>Total-100</p>
-    <p></p>
+    <p>{{getTotal()}}₹</p>
   </div>
   <div class="d-flex justify-content-end me-5 px-5">
-    <button class="btn btn-outline-primary"(click)="checkout()">checkout</button>
+    <button class="btn btn-outline-primary">checkout</button>
   </div>
 </div>
